--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,19 @@ logging:
   level:
     org.zalando.logbook: TRACE
 
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5470/filmorate
+#    username: mcat
+#    password: Inushing1980
+#    driver-class-name: org.postgresql.Driver
+
 spring:
+  sql:
+    init:
+      mode: always
   datasource:
-    url: jdbc:postgresql://localhost:5470/filmorate
+    url: jdbc:h2:mem:filmorate
     username: mcat
     password: Inushing1980
-    driver-class-name: org.postgresql.Driver
+    driverClassName: org.h2.Driver
