--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,19 +6,12 @@ logging:
   level:
     org.zalando.logbook: TRACE
 
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5470/filmorate
-#    username: mcat
-#    password: Inushing1980
-#    driver-class-name: org.postgresql.Driver
-
 spring:
   sql:
     init:
       mode: always
   datasource:
-    url: jdbc:h2:mem:filmorate
+    url: jdbc:h2:file:./db/filmorate
     username: mcat
     password: Inushing1980
     driverClassName: org.h2.Driver
